syntax = "proto3";
package types;
option go_package = "github.com/beatoz/beatoz-go/ctrlers/types";

message GovParamsProto {
  int64   version = 1;
  int64   max_validator_cnt = 2;
  bytes   _gas_price = 3;
  bytes   _reward_per_power = 4;
  int64   lazy_unstaking_blocks = 5;
  int64   lazy_applying_blocks = 6;
  uint64  min_trx_gas = 7;
  uint64  max_trx_gas = 8;
  uint64  max_block_gas = 9;
  int64   min_voting_period_blocks = 10;
  int64   max_voting_period_blocks = 11;
  int64   min_self_stake_ratio = 12;
  int64   max_updatable_stake_ratio = 13;
  int64   max_individual_stake_ratio = 14;
  int64   slash_ratio = 15;
  bytes   _min_validator_stake = 16;
  bytes   _min_delegator_stake = 19;
  int64   signed_blocks_window = 17;
  int64   min_signed_blocks = 18;

  bytes _max_total_supply = 20;
  int64 inflation_weight_permil = 21;
  int64 inflation_cycle_blocks = 22;
  int64 min_bonding_blocks = 23;
  int64 bonding_blocks_weight_permil = 24;
  bytes _reward_pool_address = 25;
  bytes _burn_address = 26;
  int64 burn_ratio = 27;
  int64 ripening_blocks = 28;
  int64 max_validators_of_delegator = 29;
  int64 max_delegators_of_validator = 30;
}